# OpenAPI-to-Chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  server_exec.py
api_code/: pet.py  schema.py  store.py  user.py
api_gen/: api.py  generator.py  helpers.py  schema.py
api_mcp/: chat.py  client.py  errors.py  server.py
api_tools/: pet.py  schema.py  store.py  user.py
