[project]
name = "fastapi-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "gradio>=5.26.0",
    "langfuse>=2.60.3",
    "logfire>=3.14.1",
    "mcp[cli]>=1.6.0",
    "pydantic-ai>=0.1.4",
    "pyyaml>=6.0.2",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]
